hydroflow/tests/compile-fail/surface_demux_port_duplicate.stderr
error: Output connection conflicts with below ($DIR/tests/compile-fail/surface_demux_port_duplicate.rs:15:18) (1/2)
  --> tests/compile-fail/surface_demux_port_duplicate.rs:14:18
   |
14 |         my_demux[c] -> for_each(std::mem::drop);
   |                  ^

error: Output connection conflicts with above ($DIR/tests/compile-fail/surface_demux_port_duplicate.rs:14:18) (2/2)
  --> tests/compile-fail/surface_demux_port_duplicate.rs:15:18
   |
15 |         my_demux[c] -> for_each(std::mem::drop);
   |                  ^

warning: unused import: `var_args`
 --> tests/compile-fail/surface_demux_port_duplicate.rs:1:35
  |
1 | use hydroflow::{hydroflow_syntax, var_args};
  |                                   ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
